--- a/02_04/Starter Code/src/app/app.component.html
+++ b/02_04/Starter Code/src/app/app.component.html
@@ -26,7 +26,7 @@
       ></mat-card-title
     >
     <button
-      *ngIf="isTouched && !isCelsius"
+      *ngIf="!isCelsius"
       mat-raised-button
       color="primary"
       (click)="convertToCelsius()"
@@ -35,7 +35,7 @@
       Convert To Celsius
     </button>
     <button
-      *ngIf="isTouched && isCelsius"
+      *ngIf="isCelsius"
       mat-raised-button
       color="primary"
       (click)="convertToFahrenheit()"
